--- a/Homework 4/books.html
+++ b/Homework 4/books.html
@@ -38,7 +38,7 @@ th, td {
     <td>4.5</td>
   </tr>
   <tr>
-    <td>Art & Soul</td>
+    <td>Art and Soul</td>
     <td>Brittainy Cherry</td>
     <td>2015</td>
     <td>427</td>
